# g2_547_final

./: .gitignore  Copy_of_steam_playtime_increase_classifier.ipynb  Dockerfile  docker-compose.yml  g2_final_model.ipynb  main.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: main.yml
steam_model/: load_to_db.py  train_steam_model.py
